[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainGame/EnemySpawner.gd" type="Script" id=1]
[ext_resource path="res://MainGame/MainGameControll.gd" type="Script" id=2]
[ext_resource path="res://Maps/Lab/objects/Ladder.tres" type="TileSet" id=3]
[ext_resource path="res://Maps/Lab/Lab.tres" type="TileSet" id=5]

[node name="MainGameScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Map" type="Node2D" parent="."]

[node name="CollisionLayer" type="TileMap" parent="Map"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="Ladder" type="TileMap" parent="Map"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 2
collision_mask = 0
format = 1

[node name="Objects" type="TileMap" parent="Map"]
format = 1

[node name="PlayerList" type="Node2D" parent="."]

[node name="EnemyList" type="Node2D" parent="."]

[node name="BulletList" type="Node2D" parent="."]

[node name="ParticleList" type="Node2D" parent="."]

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="ObjectList" type="Node2D" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.282353, 0.309804, 0.423529, 1 )

[node name="SFXList" type="Node2D" parent="."]

[connection signal="child_exiting_tree" from="BulletList" to="." method="_on_BulletList_child_exiting_tree"]
